[6.0] Accesslevel edit - simplify (#45588)
* Simplify access level edit
* deprecate language string
* Fix test
* add tab
* cs

--- a/administrator/language/en-GB/com_users.ini
+++ b/administrator/language/en-GB/com_users.ini
@@ -200,6 +200,7 @@ COM_USERS_LBL_SELECT_INSTRUCTIONS="Please select how you would like to verify yo
 COM_USERS_LEVELS_N_ITEMS_DELETED="%d View Permission Levels deleted."
 COM_USERS_LEVELS_N_ITEMS_DELETED_1="View Permission Level deleted."
 COM_USERS_LEVELS_TABLE_CAPTION="Viewing Access Levels"
+; The following string is deprecated and will be removed with 8.0
 COM_USERS_LEVEL_DETAILS="Level Details"
 COM_USERS_LEVEL_FIELD_TITLE_LABEL="Level Title"
 COM_USERS_LEVEL_FORM_EDIT="Edit Viewing Access Level"
