[6.0] Replace incorrectly removed  entries (#45618)

--- a/administrator/language/en-GB/com_joomlaupdate.ini
+++ b/administrator/language/en-GB/com_joomlaupdate.ini
@@ -28,6 +28,8 @@ COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_CUSTOM_ERROR="The custom URL field is empty
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_DEFAULT="Default"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_LABEL="Update Channel"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_NEXT="Joomla Next"
+COM_JOOMLAUPDATE_CONFIG_UPDATE_LAST_CHECK_DESC="The last time the automated updates server could reach this site. If this date is too old, something is wrong with the automated updates and you should re-initiate the process by re-saving the configuration."
+COM_JOOMLAUPDATE_CONFIG_UPDATE_LAST_CHECK_LABEL="Last Checked"
 COM_JOOMLAUPDATE_CONFIG_UPDATE_TOKEN_DESC="This is the update token that this site uses to authenticate with the Joomla Automated Updates server. It is used to ensure that only your site can update itself."
 COM_JOOMLAUPDATE_CONFIG_UPDATE_TOKEN_LABEL="Update Token"
 COM_JOOMLAUPDATE_CONFIG_VERSIONCHECK_DESC="Shows the checkbox in the pre–update check if any of the extensions installed on your site is potentially incompatible with the version of Joomla you are upgrading to. Note: the checkbox is displayed when upgrading to a new Joomla version family (minor or major version)."
