[6.0] Add custom classes to the class dropdown in the image dialog in TinyMCE (#45676)
* Added option to define image classes

* Making phpcs happy

--- a/administrator/language/en-GB/plg_editors_tinymce.ini
+++ b/administrator/language/en-GB/plg_editors_tinymce.ini
@@ -42,6 +42,11 @@ PLG_TINY_FIELD_EXTERNALPLUGINS_NAME_LABEL="Plugin Name"
 PLG_TINY_FIELD_EXTERNALPLUGINS_PATH_LABEL="Path"
 PLG_TINY_FIELD_HTMLHEIGHT_LABEL="HTML Height"
 PLG_TINY_FIELD_HTMLWIDTH_LABEL="HTML Width"
+PLG_TINY_FIELD_IMG_CLASS_LIST_LABEL="Class List"
+PLG_TINY_FIELD_IMG_CLASS_NAME_LABEL="Name"
+PLG_TINY_FIELD_IMG_CLASS_NO_CLASS="No Class Selected"
+PLG_TINY_FIELD_IMG_CLASSES_LIST_DESC="Add classes to the image class dropdown in the image dialog."
+PLG_TINY_FIELD_IMG_CLASSES_LIST_LABEL="Image Classes List"
 PLG_TINY_FIELD_LABEL_ADVANCEDPARAMS="Advanced"
 PLG_TINY_FIELD_LANGCODE_LABEL="Language Code"
 PLG_TINY_FIELD_LANGSELECT_LABEL="Automatic Language Selection"
