--- a/language/en-GB/tpl_cassiopeia.ini
+++ b/language/en-GB/tpl_cassiopeia.ini
@@ -4,18 +4,30 @@
 ; Note : All ini files need to be saved as UTF-8
 
 CASSIOPEIA="Cassiopeia Site template"
+COM_TEMPLATES_COLORS_FIELDSET_LABEL="Advanced Colour Settings"
+COM_TEMPLATES_SIZES_FIELDSET_LABEL="Advanced Font Settings"
 TPL_CASSIOPEIA_BACKTOTOP="Back to Top"
 TPL_CASSIOPEIA_BACKTOTOP_LABEL="Back-to-top Link"
+TPL_CASSIOPEIA_BODY_BACKGROUND_COLOR_LABEL="Body Background Colour"
+TPL_CASSIOPEIA_BODY_SIZE="Body Font Size (rem)"
+TPL_CASSIOPEIA_BODY_TEXT_COLOR_LABEL="Body Text Colour"
 TPL_CASSIOPEIA_BRAND_LABEL="Brand"
+TPL_CASSIOPEIA_BUTTON_BACKGROUND_COLOR_LABEL="Button Primary Background Colour"
+TPL_CASSIOPEIA_BUTTON_BACKGROUND_HOVER_COLOR_LABEL="Button Primary Hover Background Colour"
+TPL_CASSIOPEIA_BUTTON_COLOR_LABEL="Button Primary Text Colour"
+TPL_CASSIOPEIA_BUTTON_HOVER_COLOR_LABEL="Button Primary Hover Text Colour"
 TPL_CASSIOPEIA_COLOR_NAME_ALTERNATIVE="Alternative"
+TPL_CASSIOPEIA_COLOR_NAME_CUSTOM="Custom"
 TPL_CASSIOPEIA_COLOR_NAME_LABEL="Colour Theme"
 TPL_CASSIOPEIA_COLOR_NAME_STANDARD="Standard"
+TPL_CASSIOPEIA_COLORS_LABEL="Enable Advanced Colour Settings"
 TPL_CASSIOPEIA_FLUID="Fluid"
 TPL_CASSIOPEIA_FLUID_LABEL="Layout"
 TPL_CASSIOPEIA_FONT_GROUP_LOCAL="Fonts from Folder"
 TPL_CASSIOPEIA_FONT_GROUP_WEB="Fonts from Web"
 TPL_CASSIOPEIA_FONT_LABEL="Fonts Scheme"
 TPL_CASSIOPEIA_FONT_NOTE_TEXT="System fonts are the most performant although there may be small differences between operating systems.<br>Loading fonts from external sources might be against privacy regulations in some countries.<br>Loading fonts from a local folder might have a performance impact on your site."
+TPL_CASSIOPEIA_FONT_SIZES_LABEL="Enable Advanced Font Settings"
 TPL_CASSIOPEIA_FONT_SYSTEM="System Fonts"
 TPL_CASSIOPEIA_FONT_SYSTEM_BODY="Body Font Stack"
 TPL_CASSIOPEIA_FONT_SYSTEM_HEADING="Heading Font Stack"
@@ -34,6 +46,15 @@ TPL_CASSIOPEIA_FONT_SYSTEM_STACK_SYSTEM_OLDSTYLE="Old Style"
 TPL_CASSIOPEIA_FONT_SYSTEM_STACK_SYSTEM_ROUNDED="Rounded Sans"
 TPL_CASSIOPEIA_FONT_SYSTEM_STACK_SYSTEM_SLAB="Slab Serif"
 TPL_CASSIOPEIA_FONT_SYSTEM_STACK_SYSTEM_TRANSITIONAL="Transitional"
+TPL_CASSIOPEIA_FOOTER_BACKGROUND_COLOR_LABEL="Footer Background Colour"
+TPL_CASSIOPEIA_FOOTER_TEXT_COLOR_LABEL="Footer Text Colour"
+TPL_CASSIOPEIA_H1_SIZE="H1 Font Size (rem)"
+TPL_CASSIOPEIA_H2_SIZE="H2 Font Size (rem)"
+TPL_CASSIOPEIA_H3_SIZE="H3 Font Size (rem)"
+TPL_CASSIOPEIA_HEADER_BACKGROUND_COLOR_LABEL="Header Background Colour"
+TPL_CASSIOPEIA_HEADER_TEXT_COLOR_LABEL="Header Text Colour"
+TPL_CASSIOPEIA_LINK_COLOR_LABEL="Links Colour"
+TPL_CASSIOPEIA_LINK_HOVER_COLOR_LABEL="Links Hover Colour"
 TPL_CASSIOPEIA_LOGO_LABEL="Logo"
 TPL_CASSIOPEIA_STATIC="Static"
 TPL_CASSIOPEIA_STICKY_LABEL="Sticky Header"
@@ -41,3 +62,4 @@ TPL_CASSIOPEIA_TAGLINE_DESC="Optional text to show as a subheading"
 TPL_CASSIOPEIA_TAGLINE_LABEL="Tagline"
 TPL_CASSIOPEIA_TITLE="Title (alternative to logo)"
 TPL_CASSIOPEIA_XML_DESCRIPTION="Continuing the space theme (Solarflare from 1.0, Milkyway from 1.5 and Protostar from 3.0), Cassiopeia is the Joomla site template based on Bootstrap 5."
+
