--- a/language/en-GB/tpl_cassiopeia.sys.ini
+++ b/language/en-GB/tpl_cassiopeia.sys.ini
@@ -4,6 +4,8 @@
 ; Note : All ini files need to be saved as UTF-8
 
 CASSIOPEIA="Cassiopeia Site template"
+COM_TEMPLATES_COLORS_FIELDSET_LABEL="Advanced Colour Settings"
+COM_TEMPLATES_SIZES_FIELDSET_LABEL="Advanced Font Settings"
 TPL_CASSIOPEIA_MOD_CUSTOM_LAYOUT_BANNER="Banner"
 TPL_CASSIOPEIA_MOD_MENU_LAYOUT_COLLAPSE-METISMENU="Collapsible Dropdown"
 TPL_CASSIOPEIA_MOD_MENU_LAYOUT_DROPDOWN-METISMENU="Dropdown"
