--- a/administrator/language/en-GB/tpl_atum.ini
+++ b/administrator/language/en-GB/tpl_atum.ini
@@ -21,13 +21,16 @@ TPL_ATUM_COLORS_SETTINGS_TEXT_DARK_LABEL="Dark Text"
 TPL_ATUM_COLORS_SETTINGS_TEXT_LIGHT_LABEL="Light Text"
 TPL_ATUM_IMAGE_LABEL="Image"
 TPL_ATUM_IMAGE_SETTINGS_LABEL="Image Settings"
+TPL_ATUM_LOGIN_LOGO_DESCRIPTION="The recommended size is 70px x 70px"
 TPL_ATUM_LOGIN_LOGO_LABEL="Login Logo"
 TPL_ATUM_LOGIN_SIDEBAR_VIEW_WEBSITE="View website"
 TPL_ATUM_LOGO_ALT_EMPTY_DESC="Decorative Image - no description required"
 TPL_ATUM_LOGO_ALT_EMPTY_LABEL="No Description"
 TPL_ATUM_LOGO_ALT_LABEL="Image Description (Alt Text)"
 TPL_ATUM_MORE_ELEMENTS="More Elements"
+TPL_ATUM_SITE_LOGO_DESCRIPTION="The recommended size is 150px x 30px"
 TPL_ATUM_SITE_LOGO_LABEL="Brand Large"
+TPL_ATUM_SITE_LOGO_SMALL_DESCRIPTION="The recommended size is 20px x 20px"
 TPL_ATUM_SITE_LOGO_SMALL_LABEL="Brand Small"
 TPL_ATUM_TOOLBAR="Toolbar"
 TPL_ATUM_XML_DESCRIPTION="Continuing the Egyptian god/goddess theme (Khepri from 1.5, Hathor from 1.6, Isis from 3.0), Atum is the name of the Joomla administrator template."
