[6.0] add missing string + punctuation TPL_CASSIOPEIA_EXTENDED_XML_DESCRIPTION (#46098)
* add punctuation
* add missing string in sys.ini
* alpha sort

--- a/language/en-GB/tpl_cassiopeia.sys.ini
+++ b/language/en-GB/tpl_cassiopeia.sys.ini
@@ -5,6 +5,7 @@
 
 CASSIOPEIA="Cassiopeia Site template"
 TPL_CASSIOPEIA_COLORS_FIELDSET_LABEL="Colour Settings"
+TPL_CASSIOPEIA_EXTENDED_XML_DESCRIPTION="Continuing the space theme (Solarflare from 1.0, Milkyway from 1.5 and Protostar from 3.0), Cassiopeia is the Joomla site template based on Bootstrap 5. This is an extended child version with a new colour set for the base Cassiopeia template."
 TPL_CASSIOPEIA_FONTS_FIELDSET_LABEL="Font Settings"
 TPL_CASSIOPEIA_MOD_CUSTOM_LAYOUT_BANNER="Banner"
 TPL_CASSIOPEIA_MOD_MENU_LAYOUT_COLLAPSE-METISMENU="Collapsible Dropdown"
