--- a/language/en-GB/tpl_cassiopeia.ini
+++ b/language/en-GB/tpl_cassiopeia.ini
@@ -19,6 +19,7 @@ TPL_CASSIOPEIA_COLOR_NAME_ALTERNATIVE="Alternative"
 TPL_CASSIOPEIA_COLOR_NAME_CUSTOM="Custom"
 TPL_CASSIOPEIA_COLOR_NAME_LABEL="Colour Theme"
 TPL_CASSIOPEIA_COLOR_NAME_STANDARD="Standard"
+TPL_CASSIOPEIA_EXTENDED_XML_DESCRIPTION="Continuing the space theme (Solarflare from 1.0, Milkyway from 1.5 and Protostar from 3.0), Cassiopeia is the Joomla site template based on Bootstrap 5. This is an extended child version with a new colour set for the base Cassiopeia template."
 TPL_CASSIOPEIA_FLUID="Fluid"
 TPL_CASSIOPEIA_FLUID_LABEL="Layout"
 TPL_CASSIOPEIA_FONTS_FIELDSET_LABEL="Font Settings"
@@ -60,5 +61,3 @@ TPL_CASSIOPEIA_TAGLINE_DESC="Optional text to show as a subheading"
 TPL_CASSIOPEIA_TAGLINE_LABEL="Tagline"
 TPL_CASSIOPEIA_TITLE="Title (alternative to logo)"
 TPL_CASSIOPEIA_XML_DESCRIPTION="Continuing the space theme (Solarflare from 1.0, Milkyway from 1.5 and Protostar from 3.0), Cassiopeia is the Joomla site template based on Bootstrap 5."
-TPL_CASSIOPEIA_EXTENDED_XML_DESCRIPTION="Continuing the space theme (Solarflare from 1.0, Milkyway from 1.5 and Protostar from 3.0), Cassiopeia is the Joomla site template based on Bootstrap 5. This is an extended child version with a new colour set for the base Cassiopeia template"
-
