[6.1] Implement copy child template (#46278)
Co-authored-by: Brian Teeman <brian@teeman.net>

--- a/administrator/language/en-GB/com_templates.ini
+++ b/administrator/language/en-GB/com_templates.ini
@@ -11,6 +11,7 @@ COM_TEMPLATES_BUTTON_CHECK="Check Overrides"
 COM_TEMPLATES_BUTTON_CHECK_LIST_ENTRY="Mark Checked"
 COM_TEMPLATES_BUTTON_CLOSE_FILE="Close"
 COM_TEMPLATES_BUTTON_COPY_FILE="Copy File"
+COM_TEMPLATES_BUTTON_COPY_CHILD_TEMPLATE="Copy Child Template"
 COM_TEMPLATES_BUTTON_COPY_TEMPLATE="Copy Template"
 COM_TEMPLATES_BUTTON_CREATE="Create"
 COM_TEMPLATES_BUTTON_CROP="Crop"
@@ -240,6 +241,7 @@ COM_TEMPLATES_TEMPLATE_CHILD_NAME_LABEL="Child Template Name"
 COM_TEMPLATES_TEMPLATE_CHILD_STYLE_LABEL="Additional Template Styles"
 COM_TEMPLATES_TEMPLATE_CLOSE="Close"
 COM_TEMPLATES_TEMPLATE_COPY="Copy Template"
+COM_TEMPLATES_TEMPLATE_COPY_CHILD="Copy Child Template"
 COM_TEMPLATES_TEMPLATE_CORE_FILENAME="Original file &quot;%s&quot;."
 COM_TEMPLATES_TEMPLATE_DESCRIPTION="Template description."
 COM_TEMPLATES_TEMPLATE_DETAILS="%s Details and Files"
