--- a/administrator/language/en-GB/plg_task_deleteactionlogs.ini
+++ b/administrator/language/en-GB/plg_task_deleteactionlogs.ini
@@ -6,5 +6,7 @@
 PLG_TASK_DELETEACTIONLOGS="Task - Delete Action Logs"
 PLG_TASK_DELETEACTIONLOGS_DELETE_DESC="Delete Action logs after specified days."
 PLG_TASK_DELETEACTIONLOGS_DELETE_TITLE="Delete ActionLogs"
+PLG_TASK_DELETEACTIONLOGS_LOG_DELETE_AFTER="Delete Logs after %d days"
+PLG_TASK_DELETEACTIONLOGS_LOG_DELETE_END="Delete Logs end"
 PLG_TASK_DELETEACTIONLOGS_LOG_DELETE_PERIOD="Days to delete action logs after"
 PLG_TASK_DELETEACTIONLOGS_XML_DESCRIPTION="This plugin for schedule Action Logs delete Tasks."
