[6.1] Make Media Manager action crop aspect ratio configurable (#46421)
Co-authored-by: Brian Teeman <brian@teeman.net>
Co-authored-by: Allon Moritz <allon.moritz@digital-peak.com>

--- a/administrator/language/en-GB/plg_media-action_crop.ini
+++ b/administrator/language/en-GB/plg_media-action_crop.ini
@@ -4,6 +4,8 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_MEDIA-ACTION_CROP="Media Action - Crop"
+PLG_MEDIA-ACTION_CROP_ASPECT_RATIOS_DESC="Configure custom aspect ratios for the crop tool. Each ratio needs a label (e.g. '16:9'), a value (e.g. '16/9' or '1'), and optionally a group (landscape/portrait)."
+PLG_MEDIA-ACTION_CROP_ASPECT_RATIOS_LABEL="Aspect Ratios"
 PLG_MEDIA-ACTION_CROP_LABEL="Crop"
 PLG_MEDIA-ACTION_CROP_PARAM_ASPECT="Aspect Ratio"
 PLG_MEDIA-ACTION_CROP_PARAM_DEFAULT_RATIO="Default aspect ratio"
@@ -15,4 +17,11 @@ PLG_MEDIA-ACTION_CROP_PARAM_WIDTH="Width"
 PLG_MEDIA-ACTION_CROP_PARAM_X="X-Axis"
 PLG_MEDIA-ACTION_CROP_PARAM_Y="Y-Axis"
 PLG_MEDIA-ACTION_CROP_QUALITY="Quality"
+PLG_MEDIA-ACTION_CROP_RATIO_GROUP_LABEL="Group"
+PLG_MEDIA-ACTION_CROP_RATIO_GROUP_DESC="Optionally group this ratio under landscape or portrait"
+PLG_MEDIA-ACTION_CROP_RATIO_GROUP_NONE="No group"
+PLG_MEDIA-ACTION_CROP_RATIO_LABEL_LABEL="Label"
+PLG_MEDIA-ACTION_CROP_RATIO_LABEL_DESC="The label to display for this ratio (e.g. '16:9', '4:3', 'thumbnail', etc.)"
+PLG_MEDIA-ACTION_CROP_RATIO_VALUE_LABEL="Value"
+PLG_MEDIA-ACTION_CROP_RATIO_VALUE_DESC="The aspect ratio as numerator/denominator or number (e.g. 16/9, 4/3, 1)."
 PLG_MEDIA-ACTION_CROP_XML_DESCRIPTION="Adds crop functionality for images."
