--- a/administrator/language/en-GB/mod_popular.ini
+++ b/administrator/language/en-GB/mod_popular.ini
@@ -7,12 +7,23 @@ MOD_POPULAR="Popular Articles"
 MOD_POPULAR_CREATED="Created"
 MOD_POPULAR_FIELD_AUTHORS_LABEL="Authors"
 MOD_POPULAR_FIELD_COUNT_LABEL="Items to Display"
+MOD_POPULAR_FIELD_DATEFILTERING_LABEL="Date Filtering"
+MOD_POPULAR_FIELD_DATERANGEFIELD_LABEL="Date Range Field"
+MOD_POPULAR_FIELD_ENDDATE_LABEL="End Date"
+MOD_POPULAR_FIELD_RELATIVEDATE_LABEL="Relative Date"
+MOD_POPULAR_FIELD_STARTDATE_LABEL="Start Date"
 MOD_POPULAR_FIELD_VALUE_ADDED_OR_MODIFIED_BY_ME="Added or modified by me"
 MOD_POPULAR_FIELD_VALUE_ANYONE="Anyone"
 MOD_POPULAR_FIELD_VALUE_NOT_ADDED_OR_MODIFIED_BY_ME="Not added or modified by me"
 MOD_POPULAR_ITEMS="Popular Items"
 ; The following string is deprecated and will be removed with 7.0
 MOD_POPULAR_NO_MATCHING_RESULTS="No Matching Results"
+MOD_POPULAR_OPTION_CREATED_VALUE="Created Date"
+MOD_POPULAR_OPTION_DATERANGE_VALUE="Date Range"
+MOD_POPULAR_OPTION_MODIFIED_VALUE="Modified Date"
+MOD_POPULAR_OPTION_OFF_VALUE="Off"
+MOD_POPULAR_OPTION_RELATIVEDAY_VALUE="Relative Date"
+MOD_POPULAR_OPTION_STARTPUBLISHING_VALUE="Start Publishing Date"
 MOD_POPULAR_TITLE="Popular Articles"
 MOD_POPULAR_TITLE_1="Top Popular Article"
 MOD_POPULAR_TITLE_BY_ME="Top Popular Articles By Me"
