[6.1] UX feature: Filter by Author (Include/Exclude/Current User) option for Category List (#46539)
Co-authored-by: Brian Teeman <brian@teeman.net>

--- a/administrator/language/en-GB/com_content.ini
+++ b/administrator/language/en-GB/com_content.ini
@@ -58,6 +58,8 @@ COM_CONTENT_FEATURED_ORDER="Featured Articles Order"
 COM_CONTENT_FEATURED_TABLE_CAPTION="Featured Articles"
 COM_CONTENT_FEATURED_TITLE="Articles: Featured"
 COM_CONTENT_FIELD_ARTICLETEXT_LABEL="Article Text"
+COM_CONTENT_FIELD_AUTHORFILTERING_LABEL="Author Filtering Type"
+COM_CONTENT_FIELD_AUTHOR_LABEL="Authors"
 COM_CONTENT_FIELD_BROWSER_PAGE_TITLE_LABEL="Browser Page Title"
 COM_CONTENT_FIELD_CAPTCHA_LABEL="Allow Captcha on submit"
 COM_CONTENT_FIELD_CREATED_BY_ALIAS_LABEL="Created by Alias"
@@ -152,6 +154,9 @@ COM_CONTENT_NEW_ARTICLE="New Article"
 COM_CONTENT_NO_ARTICLES_LABEL="No Articles Message"
 COM_CONTENT_NO_ITEM_SELECTED="Please first make a selection from the list."
 COM_CONTENT_NUMBER_CATEGORY_ITEMS_LABEL="# Articles in Category"
+COM_CONTENT_OPTION_EXCLUSIVE_VALUE="Exclude"
+COM_CONTENT_OPTION_INCLUSIVE_VALUE="Include"
+COM_CONTENT_OPTION_ONLYCURRENTUSER_VALUE="Current User"
 COM_CONTENT_OTHER_OPTIONS="Options"
 COM_CONTENT_PAGE_ADD_ARTICLE="Articles: New"
 COM_CONTENT_PAGE_EDIT_ARTICLE="Articles: Edit"
