--- a/administrator/language/en-GB/com_guidedtours.ini
+++ b/administrator/language/en-GB/com_guidedtours.ini
@@ -101,3 +101,6 @@ COM_GUIDEDTOURS_USERSTATE_STATENOTSAVED="The User state was not saved for user %
 COM_GUIDEDTOURS_USERSTATE_STATESAVED="The User state was saved for user %1$s tour %2$s."
 COM_GUIDEDTOURS_USERSTATE_WRONGCONTEXT="The Tour User state context is incorrect."
 COM_GUIDEDTOURS_XML_DESCRIPTION="Component for managing Guided Tours functionality."
+
+COM_GUIDEDTOURS_URL_COMPONENT_EMPTY="the URL component param 'option' is unavailable or empty."
+COM_GUIDEDTOURS_URL_COMPONENT_NOT_FOUND="This URL component '%s' is not found. Verify the Relative URL."
